fix floating pagination position when submit banner is visible

--- a/editor/src/app/components/footer/footer.component.scss
+++ b/editor/src/app/components/footer/footer.component.scss
@@ -4,9 +4,13 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  padding: 15px 0;
+  padding: 8px 0;
 }
 
 .spinner-border {
   padding: 7px;
+}
+
+small {
+  white-space: nowrap;
 }
