--- a/editor/src/app/components/pagination/pagination.component.scss
+++ b/editor/src/app/components/pagination/pagination.component.scss
@@ -9,3 +9,8 @@
   z-index: 1020;
   display: block;
 }
+
+// display above submit banner
+:host-context(.has-unsubmitted-changes) {
+  bottom: 79px;
+}
