--- a/editor/src/styles.scss
+++ b/editor/src/styles.scss
@@ -15,7 +15,14 @@ body {
 
 body {
   min-width: 360px;
+
+  // sticky footer
   padding-bottom: 30px;
+
+  // and submit banner
+  &.has-unsubmitted-changes {
+    padding-bottom: 90px;
+  }
 }
 
 code,
